# WarEditor

./: .default.env  .gitignore  Cargo.toml  LICENSE  README.md
slkparser/: Cargo.toml
slkparser/benches/: slk_bench.rs
slkparser/resources/: sample_1.slk  test.slk  test_2.slk
slkparser/src/: document.rs  lib.rs  slk_type.rs
slkparser/src/record/: cell.rs
slkparser/tests/: big_sample.rs  sample_1.rs
specs/: NubMdxFormat.txt  W3M_and_W3X_Files_Format.html  blp.txt  mipmap.txt
src/: blp.rs  globals.rs  lib.rs  main.rs
src/helpers/: mod.rs
src/map_data/: binary_reader.rs  binary_writer.rs  camera_file.rs  custom_text_trigger_file.rs  data_ini.rs  doodad_map.rs  environment_file.rs  import_file.rs  map.rs  minimap_file.rs  mmp_file.rs  mod.rs  pathmap_file.rs  region_file.rs  shadowmap_file.rs  slk_datas.rs  sound_file.rs  terrain_file.rs  trigger_file.rs  trigger_jass_file.rs  trigger_string_file.rs  triggers_names_file.rs  unit_map.rs  w3i_file.rs  w3i_subs.rs
src/map_data/triggers/: enums.rs  misc.rs  mod.rs  trigger_data.rs  wtg_tests.rs
src/slk/: SLK.rs  document.rs  mod.rs
src/slk/record/: cell.rs  mod.rs
tests/: blp_parse.rs  slk_tests.rs
wce_formats/: Cargo.toml
wce_formats/src/: binary_reader.rs  blp.rs  lib.rs
wce_formats/tests/: blp_parse.rs
wce_map/: Cargo.toml
wce_map/src/: binary_reader.rs  camera_file.rs  data_ini.rs  doodad_map.rs  globals.rs  import_file.rs  lib.rs  map.rs  minimap_file.rs  mmp_file.rs  pathmap_file.rs  region_file.rs  shadowmap_file.rs  slk_datas.rs  sound_file.rs  terrain_file.rs  trigger_jass_file.rs  trigger_string_file.rs  unit_map.rs  w3i_file.rs  w3i_subs.rs
wce_map/src/custom_datas/: ability.rs  buff.rs  destructable.rs  doodad.rs  item.rs  mod.rs  unit.rs  upgrade.rs
wce_map/src/triggers/: enums.rs  misc.rs  mod.rs  trigger_data.rs  wtg_tests.rs
