[package]
name = "war_editor"
version = "0.1.0"
authors = ["Barogthor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
rand = "0.7.0"
#getset = "0.0.7"
jpeg-decoder = "0.1.18"
#vec_map = "0.8.1"
rust-ini = "0.15.2"
#num-derive = "0.2.5"
#num = "0.2.0"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.8"

