[package]
name = "wce_formats"
version = "0.1.0"
authors = ["Barogthor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies]
derivative = "2.1.0"
bencher = "0.1.5"
byteorder = "1.3.4"
log = "0.4.8"
jpeg-decoder = { git = "https://github.com/Barogthor/jpeg-decoder.git" }
rgb = "0.8.16"
