[package]
name = "wce_map"
version = "0.1.0"
authors = ["Barogthor <f.thery3103@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_assertions = "0.6.1"

[dependencies]
slkparser = { path = "../slkparser"}
bencher = "0.1.5"
byteorder = "1.3.4"
regex = "1.3.6"
lazy_static = "1.3.0"
derivative = "2.1.0"
log = "0.4.8"
mpq = "0.7.0"
smart-default = "0.6.0"